      1. /var/tmp/onlinechanged (compatibility to old behaviour) 
      2. /etc/onlinechanged/*   (new AVM behaviour)
      3. /tmp/flash/onlinechanged/* 
      If a package needs actions on changes of online status create a script
      make/$package/files/root/etc/onlinechanged/$action_$package.

- New patches (read online help for more info):

- New packages, libs, modules:
    * aiccu 20070115
    * digitemp 3.6.0
    * flex (libflex) 2.5.35
    * gw6 5.1
    * iputils s20071127
    * libfreetz 0.1
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * radvd 1.2
    * tcpproxy 2.0.0-beta15

- Updated tools and hooks:

- Updated patches:
    * add reiserfs to automountable filesystems

- Updated packages and libs:
    * cyassl 0.9.9
    * e2fsprogs 1.41.3
    * glib 2.18.2
    * lsof 4.81
    * ltrace 0.5 svn 81
    * mcabber 0.9.9
    * ntfs-3g 1.5130
    * php 5.2.7
    * pptp 1.7.2
    * rrdstats (add Thomson THG 540)
    * strace 4.5.18
    * streamripper 1.64.0
    * tor 0.2.0.32
    * vpnc 0.5.3
    * vsftpd 2.0.7: add SSL support

- Remove packages, libs, modules, tools:

- Firmware updates:
    * Please see FIRMWARES for the list of currently supported boxes and firmwares.

- BusyBox:
    * updated to 1.12.3

- Web interface:

- Other stuff:
    + add reiserfs to automountable filesystems
    + add IPv6
    + use Labor kernel sources for 3270 instead of 04.57
    + fix strip library function for 3170
    + tune behaviour of freetz_download (retries: 3, timeout: 20s)


=== Freetz-1.1-stable ===

- Build system:
  * toolchains:
    - add menuconfig option to adjust HOSTCC variable 
    - add ccache for download- and kernel-toolchain

- New tools and hooks:
  * external
  * new make targets:
    - check-downloads: checks all downloads for availability (also 
      $(pkg)-check-downloads)
    - mirror: downloads all package downloads into dl/mirror (also