@@ -21,6 +21,7 @@ Latest changes:
       make/$package/files/root/etc/onlinechanged/$action_$package.
 
 - New patches (read online help for more info):
+    * 7270: Option to add Annex A firmware into image
 
 - New packages, libs, modules:
     * aiccu 20070115
